TheGuidon/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a.nav-logo {
  background: url(logo-long-white.svg);
  background-size: cover;
  width: 14rem;
  aspect-ratio: 208/27;
}

a.nav-notlogo {
  color: white;
  font-family: "Chivo";
  font-size: 14px;
  text-decoration: none;
  padding-top: 9.825px;
}

a.nav-notlogo:hover {
  border-bottom: 2px solid white;
}

.nav-wrapper {
  position: fixed;
  background-color: #1c4480;
  width: 100%;
  height: 88px;
}

nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 100%;
}
.left-navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* background-color: green; */
  width: 450px;
  height: 30px;
}

.right-navbar {
  /* background-color: red; */
}

.apply-button {
  color: #1c4480;
  font-family: "Chivo";
  font-size: 14px;
  font-weight: 700;
  background-color: white;
  border-radius: 5px;
  border: none;
  padding: 10px 15px;
  font-weight: bold;
}

.pictures {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  height: 100vh;
  background-color: aliceblue;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}

.stand {
  font-size: 85px;
  padding-bottom: 3%;
}

.button2 {
  margin-top: 2rem;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 56px 120px;
}

.message {
  display: flex;
  justify-content: center;
  align-items: center;
}

blockquote {
  display: flex;
  justify-content: center;
  flex-direction: column;
  flex-wrap: wrap;
  padding-right: 10%;
}

.blockquote1 {
  font-family: "Chivo";
  font-size: 16px;
  color: #1c1c1c;
}

.blockquote2 {
  font-family: "Times New Roman", Times, serif;
  font-size: 48px;
  color: #1c4480;
  font-weight: bolder;
}

.video {
  /* max-width: 100%;
  width: 100%; */
  height: 300px;
  aspect-ratio: 16/9;
}

.cluster {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 96px 0px 0px;
}

.cluster-header {
  font-family: "Times New Roman", Times, serif;
  font-size: 48px;
  color: #323232;
}

.cluster-container {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fit, 20rem);
  justify-content: center;
  gap: 1.5rem;
  grid-gap: 1.5rem;
  margin: 32px 0px 0px;
}

.clusters {
  width: 100%;
  height: 158.2px;
  padding: 24px;
  box-shadow: 0 1px 5px 0 #0000001a;
}

.staff-heading {
  font-family: "Chivo";
  margin: 0px 0px 16px;
}

.clusters-text {
  width: 100%;
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

footer {
  background-color: red;
  height: 384px;
  width: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  row-gap: 2.5rem;
}

.footer-block {
  padding: 1rem;
  text-align: center;
}

